# hello-protobuf

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  Person.pb.cc  Person.pb.h  Person.proto  README.md  cmake_install.cmake  hello_protobuf.cbp  main.cpp  protobuffer_example.cbp
